# fastapi-template

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy-cloudrun.yml
src/myapi/: app.py  settings.py
src/test/: test_handlers.py
